fixed text align issue

--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ main {
 }
 
 .outdoor_img {
-    /*border: 1px solid yellow; */ 
+    border: 1px solid yellow; 
     text-align: center;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -123,7 +123,7 @@ main {
     
 }
 .outdoor_img p {
-    max-width: 450px;
+    max-width: 500px;
     font-size: 22px;
     text-align: center;
 }
@@ -132,7 +132,6 @@ main {
 }
 .tule {
     align-self: center;
-    
 }
 
 .mill_trail:hover {
